--- a/olca-app/html/start_page.html
+++ b/olca-app/html/start_page.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+
+
     <title>Welcome to openLCA</title>
     <link href="../libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 
     <style type="text/css">
-        .info-box {            
+        .well {            
             background-color: #ffffff;
         }
         .box-row1 {
@@ -19,6 +21,9 @@
         }
         .box-row2 {
             padding: 20px;
+        }
+        .btn-primary {
+            width:225px;
         }
     </style>
 </head>
@@ -37,14 +42,14 @@
         <div class="row">
 
             <div class="col-sm-6 box-row1">
-                <div class="well info-box">
+                <div class="well">
                     <h3>
                         <img src="../images/tools_48.png" style="margin:5px">Getting started</h3>
                     <p>With the new version of openLCA it is really easy to get started. You can just import a database from an existing zolca-file and open it from the navigation on the left side. Then open the database with a simple double click.</p>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-1">
-                                <button class="btn btn-primary" style="width:230px">Import a database</button>
+                                <button class="btn btn-primary" onclick="callImportDatabase()">Import a database</button>
                             </div>
                         </div>
                     </div>
@@ -52,14 +57,14 @@
             </div>
 
             <div class="col-sm-6 box-row1">
-                <div class="well info-box">
+                <div class="well">
                     <h3>
                         <img src="../images/import_data_48.png" style="margin:5px">Download data</h3>
                     <p>You can get professional LCA databases ready to use in openLCA from openLCA Nexus. There you can find professional LCI databases like ecoinvent or GaBi but also free databases and other resources like LCIA methods.</p>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-1">
-                                <button class="btn btn-primary" style="width:230px">Visit openLCA Nexus</button>
+                                <button class="btn btn-primary" onclick="callOpenUrl('https://nexus.openlca.org')">Visit openLCA Nexus</button>
                             </div>
                         </div>
                     </div>
@@ -70,14 +75,14 @@
         <div class="row">
 
             <div class="col-sm-6 box-row2">
-                <div class="well info-box">
+                <div class="well">
                     <h3>
                         <img src="../images/documentation_48.png" style="margin:5px">Read the documentation</h3>
                     <p>There is an openLCA Wiki and a forum available where you can learn more about openLCA and ask questions. Additional documentation is also available on our website.</p>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-1">
-                                <button class="btn btn-primary" style="width:230px">Visit the openLCA Wiki</button>
+                                <button class="btn btn-primary" onclick="callOpenUrl('http://www.openlca.org/documentation')">Visit the openLCA Wiki</button>
                             </div>
                         </div>
                     </div>
@@ -85,23 +90,43 @@
             </div>
 
             <div class="col-sm-6 box-row2">
-                <div class="well info-box">
+                <div class="well">
                     <h3>
                         <img src="../images/java_48.png" style="margin:5px">It is open source</h3>
                     <p>openLCA is an open source Java application licensed under the Mozilla Public License and developed by GreenDelta and contributors. The source code is hosted on Github.</p>
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-1">
-                                <button class="btn btn-primary" style="width:230px">Visit the openLCA Github page</button>
+                                <button class="btn btn-primary" onclick="callOpenUrl('https://github.com/GreenDelta/olca-app')">Visit the openLCA Github page</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
     </div>
+
+    <script type="text/javascript">
+        // the functions openUrl and importDatabase should be registered by the 
+        // host editor in openLCA
+        
+        function callOpenUrl(url) {
+            if(typeof(openUrl) == "function") {
+                openUrl(url);
+            } else if (typeof(console) != "undefined") {
+                console.log("could not open " + url + "; openUrl is not a function");
+            }
+        }
+        
+        function callImportDatabase() {
+            if(typeof(importDatabase) == "function") {
+                importDatabase();
+            } else if (typeof(console) != "undefined") {
+                console.log("importDatabase is not a function");
+            }
+        }
+    </script>
+
 
 </body>
 
