--- a/olca-app/html/report_view.html
+++ b/olca-app/html/report_view.html
@@ -25,14 +25,16 @@
         .btn-primary {
             width:225px;
         }
+        .popover {
+        	min-width: 200px;
+        	text-align: center;
+        }
     </style>
 </head>
 
 <body>
 	<div id="contentDiv" data-ng-controller="Controller">
-
 		<div class="container-fluid" style="margin:20px">
-			
 			<div class="row">
 				<h1 class="col-sm-12 box-row1">{{report.title}}</h1>
 			</div>
@@ -43,6 +45,7 @@
 					<p>
 						{{section.text}}
 					</p>
+					<div class="include-navbar" data-ng-if="section.componentId == 'parameter_table'" data-ng-include src="'parameters-table.html'"></div>
 				</div>
 			</div>
 		</div>
@@ -50,12 +53,49 @@
 
     <script src="../libs/jquery.min_1.9.0.js"></script>
     <script src="../libs/angular.min.js"></script>
+    <script src="../libs/ui-bootstrap-tpls-0.11.0.min.js"></script>
     <script src="../libs/bootstrap/js/bootstrap.min.js"></script>
     <script src="../libs/olca.utils.js"></script>
 
+	<script type="text/ng-template" id="parameters-table.html">
+		<div class="table-responsive">
+			<table class="table table-hover">
+				<thead><tr><th>Parameter</th><th>Value</th></tr></thead>
+				<tbody>
+				<tr data-ng-repeat="parameter in report.parameters | orderBy:'section.name':true">
+					<td>
+						<popover>
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="Enter value" data-ng-model="parameter.redef.name" readonly>
+							<span class="input-group-addon popoverControl" data-toggle="popover" data-content="{{parameter.description}}"><span class="glyphicon glyphicon-comment"></span></span>
+						</div>
+					</td>
+					<td><input type="text" class="form-control" placeholder="Enter value" data-ng-model="parameter.value"></td>
+				</tr>
+                </tbody>
+			</table>
+		</div>
+		<button class="pull-right btn btn-primary">Calculate</button>
+	</script>
+
     <script type="text/javascript">
-        var app = angular.module('ReportPreviewPage', []);
-        var Controller = function ($scope) {        	
+        var app = angular.module('ReportPreviewPage', ['ui.bootstrap']);
+	    app.directive('popover', function() {
+	        var fn;
+	        fn = function(scope, element, attrs) {
+	    	    	$(document).ready(function () {
+	    	    	    $(".popoverControl").popover({
+	    	    	        placement : 'top',
+	    	    	    });
+	    	    	});
+	         	};
+	        return {
+	            restrict: 'E',
+	            link: fn,
+	        };
+	    });
+
+	    var Controller = function ($scope) {        	
         	$scope.report = {};
         };
         app.controller('Controller', Controller);
